--- a/R/adhoc_analyses/impfmodellierung_report.Rmd
+++ b/R/adhoc_analyses/impfmodellierung_report.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Ärztliche Praxen werden zur Unterstützung der Impfzentren gebraucht"
-author: "Thomas Czihal, Lars Kroll, Edgar Steiger"
+author: "Thomas Czihal, Lars Kroll, Dominik von Stillfried, Edgar Steiger"
 date: "4 2 2021"
 output:
   pdf_document: default
@@ -14,30 +14,37 @@ knitr::opts_chunk$set(fig.width=7, fig.height=7 *9/16)
 
 ```{r import, include=FALSE}
 library(kableExtra)
-source("R/adhoc_analyses/Impfmodellierung.R")
+source("R/adhoc_analyses/Impfmodellierung_ES.R")
 ```
 
 # Zusammenfassung
 
-Mit den bevorstehenden Lieferungen der Impfstoffe wird es bald nötig, zusätzlich zu den Impfzentren auch Impfungen in vertragsärztlichen Praxen durchzuführen, um die vorhandenen Impfstoffe schnellstmöglich zu verabreichen.
+Ziel der vorliegenden Modellrechnungen ist die Entwicklung eines quantitativen Gerüsts für den zukünftigen Verlauf der nationalen Impfkampagne. Grundlage sind die im Rahmen des Impfgipfels bereitgestellte Informationen zu möglichen Liefermengen und zur bundesweiten Kapazität der Impfzentren.
+
+Die Modellrechnungen zeigen, dass noch im ersten Quartal die verfügbaren Impfstoffmengen die bestehenden Kapazitäten der Impfzentren übersteigt. Bis zum 21. September kann mit einer wöchentlichen Impfstoffverfügbarkeit von 900tsd- bis 9,7 Mio. Dosen ausgegangen werden. Die Kapazität der Impfzentren beträgt derzeit 1,4. Mio. Impfungen pro KW und kann sicherlich auf 2,1 Mio. Impfungen gesteigert werden.
+Unter der Annahme der Steigerung der Kapazität in den Impfzentren sind noch im ersten Quartal über 6.000 Praxen, im zweiten Quartal bis zu 40.000 Praxen und im dritten Quartal über 80.000 Praxen notwendig, um die Differenz zwischen verfügbarem Impfstoff und Kapazität der Impfzentren zu schließen.
+
+Im Ergebnis zeigt sich, dass für einen zügigen Impffortschritt schnellstmöglich die Voraussetzungen für Impfungen in den Arztpraxen geschaffen werden müssen. Diese müssen bis in das dritte Quartal als komplementär zu den Impfzentren gestaltet werden, ein Abbau der Kapazitäten der Impfzentren scheint frühestens im vierten Quartal realistisch. Da diese Modeliierungen dynamisch angepasst werden müssen, wird ein Simulationswerkzeug entwickelt, indem einfach verschiedene Szenarien betrachtet werden können. Dieses Werkzeug kann voraussichtlich bis zum 17. Februar bereitgestellt werden.    
+
 
 # Annahmen, Parameter und Szenarien
 
 <!-- Mit den zugelassenen Impfstoffen sind derzeit nur Impfungen an Personen über 18 Jahren möglich.  -->
 
-Wir modellieren mit 400 Impfzentren in Deutschland, die insgesamt täglich 200.000 Impfungen durchführen können (Montag bis Sonntag). Weiterhin rechnen wir mit etwa 50.000 vertragsärztlichen Praxen, in denen mindestens jeweils 20 Impfungen pro Tag möglich sind (Montag bis Freitag). Damit können in diesen Praxen theoretisch mehr als 700.000 Impfungen pro Tag im Wochenmittel bzw. 5 Millionen Impfungen pro Woche durchgeführt werden. In unserer Modellierung gehen wir, davon aus, dass die Praxen einspringen, um Lücken in der Kapazität der Impfzentren zu füllen. 
+Wir modellieren mit ca. 400 Impfzentren in Deutschland, die insgesamt täglich 200.000 Impfungen durchführen können (Montag bis Sonntag). Weiterhin rechnen wir mit etwa 50.000 vertragsärztlichen Praxen, in denen mindestens jeweils 20 Impfungen pro Tag möglich sind (Montag bis Freitag). Damit können in diesen Praxen theoretisch mehr als 700.000 Impfungen pro Tag im Wochenmittel bzw. 5 Millionen Impfungen pro Woche durchgeführt werden. In unserer Modellierung gehen wir, davon aus, dass die Praxen die Impfungen übernehmen, die die Kapazitätsgrenze der Impfzentren übersteigt.
 
 Für die zukünftige Planung berücksichtigen wir die verabredeten Impfstofflieferungen je nach Hersteller, sowie die nach heutigem Stand bereits verabreichten (RKI) und gelieferten Impfstoffdosen. In erweiterten Leistungsfähigkeits-Szenarien berechnen wir unsere Ergebnisse für Impfzentren mit erhöhter Leistungsfähigkeit (300.000 Impfungen gesamt pro Tag). Damit ergeben sich für die Impfzentren werk- und wochentägliche Kapazitäten je nach Einrichtung wie in Abbildung 1 dargestellt.
 
+
 **Abb. 1: Leistungsfähigkeit der Impfzentren**
 
-```{r szenarientabelle, echo=FALSE, fig.height=5 *9/16}
+```{r szenarientabelle, echo=FALSE, fig.height=4 *9/16}
 szenarien %>% rename("Mo-Fr"=	kap_wt	, "Sa+So"=kap_we)  %>% gather(Merkmal,Wert,2:3) %>%
   mutate(Wert=ifelse(Merkmal=="Sa+So", 2*Wert, 5*Wert),
          Merkmal=factor(Merkmal, ordered = TRUE, levels = c("Sa+So", "Mo-Fr"))) %>% ggplot(aes(x=szenario,fill=Merkmal,y=Wert/1000)) + geom_bar(pos="stack",stat="identity") + coord_flip() + theme_minimal() + scale_fill_zi() + labs(x="",y="Anzahl wöchentlicher Impfungen in Tsd.", fill="")
 ```
 
-Für die Lieferungen berücksichtigen wir zwei Lieferungs-Szenarien: Im ersten Szenario werden die quartalsweise zugesicherten Lieferungen gleichmäßig auf die Monate des Quartals verteilt ("Gleichverteilung"), im zweiten Szenario ("Linearer Anstieg") verschieben sich die zugesagten Lieferungen bis Juni nach hinten, sodass im 2. Quartal im April 20%, im Mai 35% und dafür im Juni 45% der für das Quartal jeweils durch die Hersteller zugesicherten Dosen geliefert werden. Die zugesagten Lieferungen sind in Abbildung 2 dargestellt. 
+Für die Lieferungen berücksichtigen wir zwei Lieferungs-Szenarien: Im ersten Szenario werden die quartalsweise zugesicherten Lieferungen gleichmäßig auf die Monate des Quartals verteilt (“Gleichverteilung”), im zweiten Szenario (“Linearer Anstieg”) verschieben sich die zugesagten Lieferungen bis Juni nach hinten, sodass im 2. Quartal im April 20%, im Mai 35% und dafür im Juni 45% der für das Quartal jeweils durch die Hersteller zugesicherten Dosen geliefert werden. Die zugesagten Lieferungen sind in Abbildung 2 dargestellt.
 
 **Abb. 2: Bis Quartal 4 zugesagte Impfdosen, Quartal 1 ink. 2020**
 
@@ -76,7 +83,7 @@ output.plot1kw <- output %>%
   geom_text(data = ann_text, aes(label = lab), col="black", size=3.5) +
   # annotate("text", label = "21.9.", x = 37, y = 50, , size = 3) +
   ylim(0, NA) +
-  scale_y_continuous(breaks = c(100,200,400,600)) +
+  #scale_y_continuous(breaks = c(100,200,400,600)) +
   geom_hline(yintercept=100,  linetype="dashed") + 
   geom_vline(xintercept=38) +
   labs(color="", x="KW", y="Auslastung der Impfzentren in %")+
@@ -116,8 +123,23 @@ output.plot2kw <- output %>% mutate(#szenario = paste(szenario,Verteilungsszenar
   scale_color_zi() + theme_minimal() + theme(legend.position="bottom")
 output.plot2kw
 ```
-**Abb. 6: Modellierte Durchimpfungsrate nach Datum**
 
-```{r outputplot3, warning=FALSE, echo=FALSE}
-# output.plot3
+**Abb. 6: Potenziell zu verimpfende Dosen nach Szenario **
+
+```{r dosenkumuliert, warning=FALSE, echo=FALSE}
+bisher_verimpft <- dosen_verabreicht %>% ungroup() %>% summarise(verimpft=sum(dosen_verabreicht_erst+dosen_verabreicht_zweit)) %>% pull(verimpft)
+plot6data <-bind_rows(
+    output %>% select(Verteilungsszenario, szenario,Datum,kw,verimpft=IZ_verimpft,Zusatzbedarf) ,
+    output %>% select(Verteilungsszenario, szenario,Datum,kw,IZ_verimpft,Zusatzbedarf)  %>%
+        filter(szenario=="IZ Regelbetrieb") %>% mutate(szenario="IZ + Vertragsärzte") %>%
+        mutate(verimpft=IZ_verimpft+Zusatzbedarf)) %>%
+    group_by(Verteilungsszenario, szenario) %>% arrange(Verteilungsszenario, szenario,Datum) %>% 
+  mutate(kum_verimpft=cumsum(verimpft)+bisher_verimpft) 
+  
+ggplot(plot6data, aes(x=kw,y=kum_verimpft/1e6,color=szenario)) + geom_line(size=3) + facet_wrap(.~Verteilungsszenario , ncol=1)  +scale_color_zi() + theme_minimal() + labs(color="Szenario Impforganisation", y="Potentiell verimpfbare Dosen in Mio.") + geom_hline(yintercept = 0) + theme(legend.position = "bottom")
+
+
+
 ```
+
+
