--- a/Start.Rmd
+++ b/Start.Rmd
@@ -75,18 +75,19 @@ Row
 ### Inzidenzprojektionen 
 
 ```{r indicatorIncProj}
-indicatorIncProj <- bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<50 bei R(t) aktuell`)
+indicatorIncProj <- bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<35 bei R(t) aktuell`)
 valueBox(value=indicatorIncProj,
-         caption=paste0("Datum, bei dem mit aktuellem R-Wert die Sieben-Tage-Inzidenz den Zielwert 50 unterschreitet. \n unter 35: ",
-                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<35 bei R(t) aktuell`),
-                        ", unter 10: ",
-                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<10 bei R(t) aktuell`),
-                        ",\n mit R=0,7, unter 50: ",
-                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<50 bei R(t)=0,7`),
-                        ", unter 35: ",
-                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<35 bei R(t)=0,7`),
-                        ", unter 10: ",
-                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<10 bei R(t)=0,7`)),
+         caption=paste0("Datum, bei dem mit aktuellem R-Wert die Sieben-Tage-Inzidenz den Zielwert 35 unterschreitet. \n unter 50: ",
+                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<50 bei R(t) aktuell`),
+                        ",\n unter 10: ",
+                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<10 bei R(t) aktuell`)#,
+                        # ",\n mit R=0,7, unter 50: ",
+                        # bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<50 bei R(t)=0,7`),
+                        # ", unter 35: ",
+                        # bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<35 bei R(t)=0,7`),
+                        # ", unter 10: ",
+                        # bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<10 bei R(t)=0,7`)
+                        ),
          color = "#0086C5", # ziblue
          icon = "fa-sign-in-alt"
         )
